<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.example.myclimbingapp.ui.RoutesActivity"
    android:background="#000000">

    <TextView
        android:id="@+id/appMyRoutesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="My Routes"
        android:textColor="@color/colorTextIcons"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appMyRoutesTitle"
        android:hint="Enter Route Name"
        android:background="@color/colorTextIcons"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/routeNameEditText"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/routeNameEditText"
        android:hint="Enter Route Location"
        android:background="@color/colorTextIcons"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/routeLocationEditText"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/routeLocationEditText"
        android:hint="Enter Grade"
        android:background="@color/colorTextIcons"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/routeGradeEditText"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Route"
        android:id="@+id/addRoutesButton"
        android:background="@color/colorPrimary"
        android:textColor="@color/mainButtonText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
