<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.example.myclimbingapp.ui.RouteListActivity"
    android:background="#000000">
    <TextView
        android:id="@+id/routeListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Route List"
        android:textColor="@color/colorTextIcons"
        android:textSize="60sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="0dp" />




    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="471dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#fff"
        android:padding="10sp"
        android:textColor="#fff"/>

    <TextView
        android:id="@+id/newRouteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="My Newest Route:  "
        android:textColor="#fff"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="476dp"
        android:layout_below="@+id/listView"
        android:background="#000000"/>
</RelativeLayout>
