...
        android:layout_below="@+id/appNameTextView"
        android:layout_marginLeft="98dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="19dp">

        <Button
            android:id="@+id/routesButton"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/findRoutesButton"
            android:background="@drawable/gradientroute"
            android:layout_marginTop="5dp"
...
